--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.15",
+    "eslint": "^9.39.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "prettier": "^3.8.1",
+    "prettier-plugin-astro": "^0.14.1",
     "typescript": "^5.9.3"
   }
 }
